clusters/mlx-home-dev/mlx-charts/foundry-vtt/tw/foundry-vtt-tw-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-vtt-tw-ingress
  namespace: foundry-vtt-tw
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dev-gyre.sakagegaming.com`) 
      services:
        - kind: Service
          name: foundry-vtt-tw
          passHostHeader: true
          port: 80
  tls:
    certResolver: letsencrypt
